feat: use of the adventure ComponentLogger instead of the classic java logger